gl31-master/src/test/deca/syntax/valid/sansobjet/unary_expr2.deca
// Description:
//    tests de programme correct syntaxiquement pour sans-objet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 12/01/2021
{
    int c = 4;
    int b = -c;
}
