gl31-master/src/test/deca/syntax/invalid/sansobjet/bad_multiline.deca
// Description:
//    tests de programme incorrect syntaxiquement pour sans-objet
//
// Resultats:
//    Ligne 10 : Erreur, ',' manquant
//
// Historique:
//    cree le 18/01/2021
{
    int a b = 8;
}
